--- a/js-edimaps/_config.json
+++ b/js-edimaps/_config.json
@@ -1,12 +1,12 @@
 {
   "progm": {
-    "idxnm": "_edirbna_mapping_dav57-index.xlsx",
-    "lrfdr": "c:\\c_portab\\01_rb\\ProgramData\\js-edimap\\",
+    "idxnm": "_edirbna_mapping-index.xlsx",
+    "lrfdr": "c:\\ProgramData\\bar8tl\\js-edimap\\",
     "cigdr": "c:\\c_portab\\01_rb\\_rbprogs\\js-edimaps\\edicustig\\",
     "dbonm": "edimaps.db",
-    "dbodr": "c:\\c_portab\\01_rb\\ProgramData\\js-edimap\\",
-    "inpdr": "c:\\c_portab\\01_rb\\_work_projects\\rb202102_na_edispecs\\",
-    "outdr": "c:\\c_portab\\01_rb\\ProgramData\\js-edimap\\output\\",
+    "dbodr": "c:\\ProgramData\\bar8tl\\js-edimap\\",
+    "inpdr": "c:\\c_portab\\01_rb\\_work_projects\\rb202202_na_edispecs\\",
+    "outdr": "c:\\ProgramData\\bar8tl\\js-edimap\\output\\",
     "trims": false, "nodat": true, "omite": false, "ndchr": "¤", "lfchr": "\\n",
     "outpt": [
       {"otype": "text",     "activ": true,  "ofile": "<mapid-mvers_idocm>.txt"},
